Fixing code for sql magic

--- a/RBAC.ipynb
+++ b/RBAC.ipynb
@@ -195,6 +195,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d tbl_countriees\n",
+    "\n",
+    "YB_PATH=${1}\n",
+    "DB_NAME=${2}\n",
+    "\n",
+    "cd $YB_PATH\n",
+    "\n",
+    "\n",
+    "./bin/ysqlsh -c \"CREATE DATABASE db_ybu;\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -257,49 +278,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Show table row counts\n",
-    "Run the cell below to view the row counts for the tables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql /* row counts */\n",
-    "\n",
-    "select '' _\n",
-    "    , v1.name\n",
-    "    , v1.counts\n",
-    "from (\n",
-    "    select 'tbl_cities' as name, count(*) as counts from tbl_cities\n",
-    "    union \n",
-    "    select 'tbl_cities_name_alt_null' as name, count(*) \n",
-    "    from tbl_cities\n",
-    "    where 1=1\n",
-    "    and city_name_alt IS NULL\n",
-    "    union\n",
-    "    select 'tbl_states' as name,count(*) from tbl_states\n",
-    "    union \n",
-    "    select 'tbl_countries' as name, count(*) from tbl_countries\n",
-    "    union\n",
-    "    select 'tbl_country_name_alt_null' as name, count(*) \n",
-    "    from tbl_countries \n",
-    "    where 1=1\n",
-    "    and country_name_alt IS NULL\n",
-    "    ) v1\n",
-    "order by v1.counts desc;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Role Based Access Control\n",
     "\n",
     "Role based access control is a collection of privileges on resources given to roles. To see a list of roles currently available in your database, run the \\du command."
@@ -315,7 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "\\du"
+    "./bin/ysqlsh -c \"\\du\""
    ]
   },
   {
@@ -337,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "create role engineering"
+    "%sql create role engineering"
    ]
   },
   {
@@ -357,7 +335,7 @@
    },
    "outputs": [],
    "source": [
-    "create role john login password 'yourpasswordhere'"
+    "%sql create role john login password 'yourpasswordhere'"
    ]
   },
   {
@@ -377,7 +355,20 @@
    },
    "outputs": [],
    "source": [
-    "grant engineering to john"
+    "%sql grant engineering to john"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "./bin/ysqlsh -c \"\\du\""
    ]
   },
   {
@@ -401,6 +392,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "./bin/ysqlsh -c \"\\du\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -418,6 +422,19 @@
    "outputs": [],
    "source": [
     "drop role engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "./bin/ysqlsh -c \"\\du\""
    ]
   },
   {
@@ -439,10 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "create database testdb;\n",
-    "\\c testdb\n",
-    "\n",
-    "create table test_table(\n",
+    "%sql create table test_table(\n",
     "    id uuid primary key,\n",
     "    timeofdate timestamp,\n",
     "    result boolean,\n",
@@ -467,10 +481,10 @@
    },
    "outputs": [],
    "source": [
-    "create role engineering;\n",
-    "create role developer;\n",
-    "create role qa;\n",
-    "create role db_admin;"
+    "%sql create role engineering;\n",
+    "%sql create role developer;\n",
+    "%sql create role qa;\n",
+    "%sql create role db_admin;"
    ]
   },
   {
@@ -490,7 +504,7 @@
    },
    "outputs": [],
    "source": [
-    "grant select on test_table to engineering;"
+    "%sql grant select on test_table to engineering;"
    ]
   },
   {
@@ -505,12 +519,12 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "sql"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
    "source": [
-    "\\z"
+    "./bin/ysqlsh -c \"\\z\""
    ]
   },
   {
@@ -530,8 +544,20 @@
    },
    "outputs": [],
    "source": [
-    "grant insert, update, delete, truncate on test_table to engineering;\n",
-    "\\z"
+    "%sql grant insert, update, delete, truncate on test_table to engineering;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "./bin/ysqlsh -c \"\\z\""
    ]
   },
   {
@@ -551,8 +577,20 @@
    },
    "outputs": [],
    "source": [
-    "alter table test_table owner to qa;\n",
-    "\\z"
+    "%sql alter table test_table owner to qa;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "./bin/ysqlsh -c \"\\z\""
    ]
   },
   {
@@ -572,8 +610,20 @@
    },
    "outputs": [],
    "source": [
-    "alter role db_admin with superuser;\n",
-    "\\du"
+    "%sql alter role db_admin with superuser;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "./bin/ysqlsh -c \"\\z\""
    ]
   },
   {
@@ -595,8 +645,7 @@
    },
    "outputs": [],
    "source": [
-    "alter role db_admin with nosuperuser;\n",
-    "\\du"
+    "alter role db_admin with nosuperuser;"
    ]
   }
  ],
