Seperated books for RBAC

--- a/RBAC.ipynb
+++ b/RBAC.ipynb
@@ -219,6 +219,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create Utils\n",
+    "To help demonstrate user defined permissions for roles, this lab requires specific user defined functions. Run the following cell to create the utility functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_FUNCTIONS_FILE\"  # util functions\n",
+    "YB_PATH=${1}\n",
+    "DB_NAME=${2}\n",
+    "UTILS_FOLDER=${3}\n",
+    "UTIL_FUNCTIONS_FILE=${4}\n",
+    "\n",
+    "\n",
+    "#ls $UTIL_FOLDER\n",
+    "UTIL_FUNCTIONS_FILE_PATH=${UTILS_FOLDER}/${UTIL_FUNCTIONS_FILE}\n",
+    "\n",
+    "cd $YB_PATH\n",
+    "\n",
+    "# Functions file\n",
+    "./bin/ysqlsh -q -d ${DB_NAME} -f ${UTIL_FUNCTIONS_FILE_PATH} \n",
+    "sleep 1;\n",
+    "\n",
+    "# Describe functions\n",
+    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
     "The following cells requires:\n",
     "- Python 3.8+ and psycopg2"
@@ -278,31 +316,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Role Based Access Control\n",
+    "## All Done\n",
+    "In this lab, you completed the following:\n",
     "\n",
-    "Role based access control is a collection of privileges on resources given to roles. To see a list of roles currently available in your database, run the \\du command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\du\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You will notice that there are some roles provided by default. These roles are used for various administrative purposes.\n",
-    "\n",
-    "To create a new role, you can use the create role query. The following query creates a new role in the database named engineering."
+    "* Setup\n",
+    "    * Created the db_ybu database with ysqlsh\n",
+    "    * Created utils\n",
+    "    * Connected to the database using a PostgreSQL driver for Python\n",
+    "    \n",
+    "Next, run the following cell to open `02_RBAC.ipynb`."
    ]
   },
   {
@@ -315,337 +337,8 @@
    },
    "outputs": [],
    "source": [
-    "%sql create role engineering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The create role query will by default create a role that is not able to login to the database. If you want to allow the role to login, you can specify a method of authentication with the query. For example, you can create a role named John with a password authentication with the following query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql create role john login password 'yourpasswordhere'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can assign a role to another role. For example, if John is in the engineering department, you can assign him the engineering role"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql grant engineering to john"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\du\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also revoke a role using a revoke query. For example, if John leaves the engineering department, you can remove the engineering role."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "revoke engineering from john"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\du\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also delete a role from the database using a drop query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "drop role engineering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\du\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Granting Privileges\n",
-    "\n",
-    "Once you have defined roles in your database, you are able to grant permissions to determine what each role can do in the database. To start, create a database and table."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql create table test_table(\n",
-    "    id uuid primary key,\n",
-    "    timeofdate timestamp,\n",
-    "    result boolean,\n",
-    "    details jsonb\n",
-    ");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the test table and database created, use the create role query to create some test roles in the database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql create role engineering;\n",
-    "%sql create role developer;\n",
-    "%sql create role qa;\n",
-    "%sql create role db_admin;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you want a role to have read access to test_table, you can use a grant select query. The following query grants select privileges on the test_table table to the engineering role."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql grant select on test_table to engineering;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The \\z command can be used to verify that the access privileges were set correctly. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\z\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are various other grant queries which can be used to set privileges for roles. Insert, update, delete and truncate are examples of common grant queries. You can assign more than one privilege in a single query using a comma seperated list."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql grant insert, update, delete, truncate on test_table to engineering;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\z\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To allow a role to alter a table, you can assign the role owner using an alter table query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql alter table test_table owner to qa;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\z\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To assign a role all privileges in a database, you can use alter role to assign the superuser privilege.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql alter role db_admin with superuser;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "./bin/ysqlsh -c \"\\z\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After running the \\du command, you will see the db_admin role assigned Superuser in the list of roles and attributes.\n",
-    "\n",
-    "If you choose to remove the superuser role later, you can alter the role with the nosuperuser option."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "alter role db_admin with nosuperuser;"
+    "%%bash\n",
+    "gp open 02_RBAC.ipynb"
    ]
   }
  ],
