Finializing RLS/RBAC

--- a/02_RBAC.ipynb
+++ b/02_RBAC.ipynb
@@ -42,6 +42,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%store -r MY_DB_NAME\n",
+    "%store -r MY_YB_PATH\n",
+    "%store -r MY_GITPOD_WORKSPACE_URL\n",
+    "%store -r MY_HOST_IPv4_01\n",
+    "%store -r MY_HOST_IPv4_02\n",
+    "%store -r MY_HOST_IPv4_03\n",
+    "%store -r MY_NOTEBOOK_DIR\n",
+    "%store -r MY_TSERVER_WEBSERVER_PORT\n",
+    "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
+    "%store -r MY_DATA_DDL_FILE\n",
+    "%store -r MY_DATA_DML_FILE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Connect to db_ybu\n",
     "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
     "import psycopg2\n",
@@ -258,12 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql create table test_table(\n",
-    "    id uuid primary key,\n",
-    "    timeofdate timestamp,\n",
-    "    result boolean,\n",
-    "    details jsonb\n",
-    ");"
+    "%sql create table test_table(id uuid,timeofdate timestamp,result boolean,details jsonb);"
    ]
   },
   {
@@ -454,6 +468,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Check Access Script\n",
+    "Alternative tools like [CrunchyData](https://github.com/CrunchyData/crunchy_check_access) check access extension can be used to view access and permissions of various roles. This extension has been installed already in the notebook. To view all user permissions, run the query block below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql SELECT * FROM all_access() WHERE base_role != CURRENT_USER;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This query displays all user access where the base role is not the current user, ignoring all system catalog and information schemas. This helps to filter the data displayed for permission queries, making it easier to find the data you need. Other functions like `my_privs` exist to allow a user to see their own permissions in the database. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql SELECT * FROM my_privs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This query shows the permissions for our current user, which is `db_admin`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# All done!\n",
     "In this lab, you completed the following:\n",
     "\n",
@@ -462,7 +524,7 @@
     "    * Defined permissions for different roles in the database\n",
     "    * Deleted and revoked roles\n",
     "\n",
-    "Next, run the following cell to open `02_RBAC.ipynb`"
+    "Next, run the following cell to open `03_RLS.ipynb`"
    ]
   }
  ],
