--- a/03_RLS.ipynb
+++ b/03_RLS.ipynb
@@ -14,12 +14,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
+    "The following cells requires:\n",
+    "- Python 3.8+ and psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%store -r MY_DB_NAME\n",
+    "%store -r MY_YB_PATH\n",
+    "%store -r MY_GITPOD_WORKSPACE_URL\n",
+    "%store -r MY_HOST_IPv4_01\n",
+    "%store -r MY_HOST_IPv4_02\n",
+    "%store -r MY_HOST_IPv4_03\n",
+    "%store -r MY_NOTEBOOK_DIR\n",
+    "%store -r MY_TSERVER_WEBSERVER_PORT\n",
+    "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
+    "%store -r MY_DATA_DDL_FILE\n",
+    "%store -r MY_DATA_DML_FILE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "./ysqlsh"
+    "# Connect to db_ybu\n",
+    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
+    "import psycopg2\n",
+    "import sqlalchemy as alc\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# env_var.env\n",
+    "db_host=MY_HOST_IPv4_01\n",
+    "db_name=MY_DB_NAME\n",
+    "\n",
+    "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
+    "\n",
+    "# engine = create_engine(connection_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load SQL magic extension\n",
+    ">IMPORTANT!\n",
+    ">\n",
+    "> To use SQL magic, you must run the following cell that loads the notebook extension."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%reload_ext sql\n",
+    "# creates connection for sql magic\n",
+    "%sql {connection_str}"
    ]
   },
   {
@@ -39,12 +108,11 @@
    },
    "outputs": [],
    "source": [
-    "create table employees ( empno int, ename text, address text, salary int,\n",
-    "                         account_number text );\n",
+    "%sql create table employees ( empno int, ename text, address text, salary int,account_number text );\n",
     "\n",
-    "insert into employees values (1, 'joe', '56 grove st',  20000, 'AC-22001' );\n",
-    "insert into employees values (2, 'mike', '129 81 st',  80000, 'AC-48901' );\n",
-    "insert into employees values (3, 'julia', '1 finite loop',  40000, 'AC-77051');"
+    "%sql insert into employees values (1, 'joe', '56 grove st',  20000, 'AC-22001' );\n",
+    "%sql insert into employees values (2, 'mike', '129 81 st',  80000, 'AC-48901' );\n",
+    "%sql insert into employees values (3, 'julia', '1 finite loop',  40000, 'AC-77051');"
    ]
   },
   {
@@ -64,14 +132,14 @@
    },
    "outputs": [],
    "source": [
-    "create role joe login password 'yourpasswordhere';\n",
-    "grant select on employees to joe;\n",
+    "%sql create role joe login password 'yourpasswordhere';\n",
+    "%sql grant select on employees to joe;\n",
     "\n",
-    "create role mike login password 'yourpasswordhere';\n",
-    "grant select on employees to mike;\n",
+    "%sql create role mike login password 'yourpasswordhere';\n",
+    "%sql grant select on employees to mike;\n",
     "\n",
-    "create role julia login password 'yourpasswordhere';\n",
-    "grant select on employees to julia;"
+    "%sql create role julia login password 'yourpasswordhere';\n",
+    "%sql grant select on employees to julia;"
    ]
   },
   {
@@ -91,8 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "create policy emp_rls_policy on employees for all to public using (\n",
-    "           ename=current_user);"
+    "%sql create policy emp_rls_policy on employees for all to public using (ename=current_user);"
    ]
   },
   {
@@ -109,13 +176,12 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "sql"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
    "source": [
-    "\\c testdb joe;\n",
-    "select * from employees;"
+    "./ysqlsh -U joe -d testdb -c \"select * from employees;\""
    ]
   }
  ],
