--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -169,7 +169,7 @@
     "print(MY_DATA_DDL_FILE, MY_DATA_DML_FILE)\n",
     "MY_UTIL_FUNCTIONS_FILE=os.environ.get(\"MY_UTIL_FUNCTIONS_FILE\")\n",
     "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
-    "\n",
+    "MY_UTIL_SECURITY=os.environ.get(\"MY_UTIL_SECURITY\")\n",
     "# Current directory of project and related child folders\n",
     "MY_NOTEBOOK_DIR=os.getcwd()\n",
     "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
@@ -191,7 +191,8 @@
     "%store MY_DATA_DDL_FILE\n",
     "%store MY_DATA_DML_FILE\n",
     "%store MY_UTIL_FUNCTIONS_FILE\n",
-    "%store MY_UTIL_YBTSERVER_METRICS_FILE"
+    "%store MY_UTIL_YBTSERVER_METRICS_FILE\n",
+    "%store MY_UTIL_SECURITY"
    ]
   },
   {
@@ -233,15 +234,15 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_FUNCTIONS_FILE\"  # util functions\n",
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_SECURITY\"  # util functions\n",
     "YB_PATH=${1}\n",
     "DB_NAME=${2}\n",
     "UTILS_FOLDER=${3}\n",
-    "UTIL_FUNCTIONS_FILE=${4}\n",
+    "UTIL_SECURITY=${4}\n",
     "\n",
     "\n",
     "#ls $UTIL_FOLDER\n",
-    "UTIL_FUNCTIONS_FILE_PATH=${UTILS_FOLDER}/${UTIL_FUNCTIONS_FILE}\n",
+    "UTIL_FUNCTIONS_FILE_PATH=${UTILS_FOLDER}/${UTIL_SECURITY}\n",
     "\n",
     "cd $YB_PATH\n",
     "\n",
