Updating RLS and text

--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -9,8 +9,7 @@
     "This lab consists of several Jupyter notebooks. The notebooks run in Gitpod. [Gitpod](https://www.gitpod.io/) facilitates runtime environments where a YugabyteDB database cluster can be deployed. Read the following instructions for requirements and setup of the Gitpod environment.\n",
     "\n",
     "## About Jupyter notebooks\n",
-    "You will use a Jupyter notebook in this lab to run commands to assign environmental variables and Cassandra Query Language commands for the Yugabyte Cloud Query Language known as YCQL. \n",
-    "\n",
+    "You will use a Jupyter notebook in this lab to run commands to assign environmental variables for working with the YugabyteDB database.\n",
     "There are two types of cells: markdown and code. This is a markdown cell.\n",
     "\n",
     "You run a code cell by simply selecting the play icon in the cell's left gutter. For code cells, you can modify the code for execution. Certain labs contain challenges or experiments that require you to do just that - modify a code cell and re-run it!\n",
@@ -205,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d tbl_countriees\n",
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"\n",
     "\n",
     "YB_PATH=${1}\n",
     "DB_NAME=${2}\n",
