--- a/02_RBAC.ipynb
+++ b/02_RBAC.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Role Based Access Control\n",
     "\n",
-    "Role based access control is a collection of privileges on resources given to roles. "
+    "Role based access control is a collection of privileges on resources given to roles. The purpose of role based access control is to allow administrators to control access to database related resources. In this workbook, you will see various examples of creating roles and granting permissions to roles. "
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will notice that there are some roles provided by default. These roles are used for various administrative purposes.\n",
+    "You will notice that there are some roles provided by default. These roles are used for various administrative purposes. Some notable roles include `yugabyte` used for YugabyteDB administration, `yb_fdw`, used for foreign data wrappers, and `yb_extension`, used for extension management. \n",
     "\n",
     "To create a new role, you can use the create role query. The following query creates a new role in the database named engineering."
    ]
@@ -149,7 +149,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The create role query will by default create a role that is not able to login to the database. If you want to allow the role to login, you can specify a method of authentication with the query. For example, you can create a role named John with a password authentication with the following query."
+    "The create role query will by default create a role that is not able to login to the database. This type of role is used for assigning general permissions. For example, you can create a general role named engineering to provide permissions for any engineer in your organization. \n",
+    "\n",
+    "If you want to allow the role to login, you can specify a method of authentication with the query. For example, you can create a role named John with a password authentication with the following query."
    ]
   },
   {
@@ -166,6 +168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can assign a role to another role. For example, if John is in the engineering department, you can assign him the engineering role. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -176,6 +185,13 @@
    "outputs": [],
    "source": [
     "%sql grant engineering to john"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the `\\du` command, you will now see two roles, engineering and john. The field `rolcanlogin` is set to true for john, since we enabled login for this user. We can also see in the `memberof` field that john has been assigned the role engineering."
    ]
   },
   {
@@ -195,8 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can assign a role to another role. For example, if John is in the engineering department, you can assign him the engineering role\n",
-    "You can also revoke a role using a revoke query. For example, if John leaves the engineering department, you can remove the engineering role."
+    "If john later leaves the engineering department, we can revoke the engineering role using a `revoke` query. Running the cell below will remove the engineering role from john. You will see the results in the `\\du` command, which will no longer show engineering for john in the `memberof` column."
    ]
   },
   {
@@ -229,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also delete a role from the database using a drop query."
+    "You can also delete a role from the database using a drop query. This will completly remove the role from the database. After running the `drop role` query below, you will see it removed from the `\\du` list. "
    ]
   },
   {
@@ -264,7 +279,7 @@
    "source": [
     "## Granting Privileges\n",
     "\n",
-    "Once you have defined roles in your database, you are able to grant permissions to determine what each role can do in the database. To start, create a database and table."
+    "Once you have defined roles in your database, you are able to grant permissions to determine what each role can do in the database. To start, let's create a simple table in our database."
    ]
   },
   {
@@ -284,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the test table and database created, use the create role query to create some test roles in the database"
+    "With the test table created, use the `create role` query to create some test roles in the database. We will create 4 roles in total."
    ]
   },
   {
@@ -307,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want a role to have read access to test_table, you can use a grant select query. The following query grants select privileges on the test_table table to the engineering role."
+    "If you want a role to have read access to test_table, you can use a `grant` query. The following query grants select privileges on the test_table table to the engineering role."
    ]
   },
   {
@@ -327,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \\z command can be used to verify that the access privileges were set correctly. "
+    "The \\z command can be used to verify that the access privileges were set correctly. If the permissions were set correctly, you will see `engineering=r/yugabyte` added to the `Access privileges` column of `test_table`."
    ]
   },
   {
@@ -380,6 +395,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the output of the `\\z` command, you will now see `arwdD/yugabyte` for the engineering role. Each letter in the output represents a different privilege on the table:\n",
+    "\n",
+    "* a: insert (append)\n",
+    "* r: read\n",
+    "* w: update (write)\n",
+    "* d: delete\n",
+    "* D: truncate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To allow a role to alter a table, you can assign the role owner using an alter table query."
    ]
   },
@@ -413,6 +441,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The results of the `\\z` command shows the access privilege `arwdD/qa` for the engineering role now. The `/qa` portion of the result indicates the owner of the table, which is now the `qa` role. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To assign a role all privileges in a database, you can use alter role to assign the superuser privilege.  "
    ]
   },
@@ -439,15 +474,20 @@
    },
    "outputs": [],
    "source": [
-    "%sql \\z"
+    "%sql \\du"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After running the \\du command, you will see the db_admin role assigned Superuser in the list of roles and attributes.\n",
-    "\n",
+    "The `\\du` command shows that the `db_admin` role has the `rolsuper` column set to `True`, indicating that the user is a super user. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If you choose to remove the superuser role later, you can alter the role with the nosuperuser option."
    ]
   },
@@ -489,7 +529,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This query displays all user access where the base role is not the current user, ignoring all system catalog and information schemas. This helps to filter the data displayed for permission queries, making it easier to find the data you need. Other functions like `my_privs` exist to allow a user to see their own permissions in the database. "
+    "This query displays all user access where the base role is not the current user, ignoring all system catalog and information schemas. This helps to filter the data displayed for permission queries, making it easier to find the data you need. You can filter on `objname` to see specific database objects, or `objtype` to view specific types of objects like tables. If you want to look for specific permissions, you can filter based on the `privname` column.\n",
+    "\n",
+    "Other functions like `my_privs` exist to allow a user to see their own permissions in the database. "
    ]
   },
   {
@@ -525,6 +567,20 @@
     "    * Deleted and revoked roles\n",
     "\n",
     "Next, run the following cell to open `03_RLS.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "gp open 03_RLS.ipynb"
    ]
   }
  ],
