--- a/03_RLS.ipynb
+++ b/03_RLS.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Row-level security (RLS) restricts rows that can be returned by normal queries or inserted, updated, or deleted by DML commands. RLS policies can be created specific to a DML command or with ALL commands. They can also be used to create policies on a particular role or multiple roles.\n",
     "\n",
-    "To start, connect to your yugabyteDB instance\n"
+    "To start, connect to your YugabyteDB instance\n"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are going to create a row level security policy that limits what each of the roles can see in the table. To achieve this, you will use a create policy query."
+    "You are going to create a row level security policy that limits what each of the roles can see in the table. To achieve this, you will use a `create policy` query."
    ]
   },
   {
@@ -168,6 +168,27 @@
    "source": [
     "The name of the created policy is emp_rls_policy. This policy is being applied to the employees table for all of the DDL commands. The public keyword indicates that this rule applies to all roles in the database. The policy will automatically filter the data so that the data shown is only the rows where the ename field matches the name of the current role.\n",
     "\n",
+    "To apply this to the table, you can alter the table to enabled row level security.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "alter table employees enable row level security;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To verify that this works correctly, connect to the database as one of the created roles and attempt to query the employees table."
    ]
   },
@@ -181,7 +202,14 @@
    },
    "outputs": [],
    "source": [
-    "./ysqlsh -U joe -d testdb -c \"select * from employees;\""
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d tbl_countriees\n",
+    "\n",
+    "YB_PATH=${1}\n",
+    "DB_NAME=${2}\n",
+    "\n",
+    "cd $YB_PATH\n",
+    "\n",
+    "./bin/ysqlsh -U joe -d db_ybu -c \"select * from employees;\""
    ]
   }
  ],
