Updating some syntax

--- a/02_RBAC.ipynb
+++ b/02_RBAC.ipynb
@@ -522,7 +522,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM all_access() WHERE base_role != CURRENT_USER;"
+    "%sql select * from all_access() where base_role != CURRENT_USER;"
    ]
   },
   {
@@ -544,7 +544,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM my_privs()"
+    "%sql select * from my_privs()"
    ]
   },
   {
