--- a/03_RLS.ipynb
+++ b/03_RLS.ipynb
@@ -182,7 +182,7 @@
    },
    "outputs": [],
    "source": [
-    "alter table employees enable row level security;"
+    "%sql alter table employees enable row level security;"
    ]
   },
   {
@@ -202,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d tbl_countriees\n",
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"\n",
     "\n",
     "YB_PATH=${1}\n",
     "DB_NAME=${2}\n",
