--- a/02_RBAC.ipynb
+++ b/02_RBAC.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\\\" href=\"http://university.yugabyte.com\\\"><img src=\"assets/YBU_Logo.webp\" /></a></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Role Based Access Control\n",
     "\n",
     "Role based access control is a collection of privileges on resources given to roles. The purpose of role based access control is to allow administrators to control access to database related resources. In this workbook, you will see various examples of creating roles and granting permissions to roles. "
